--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,52 @@
 
-h1{
+:root {
+    --branding-color: rgb(57, 148, 142); 
+    --secondary-color: #BFE9DC; 
+    --heading-font-family: 'Rubik', sans-serif; 
+    --default-font-family: 'Poppins', sans-serif;
+}
+
+body {
+    font-family: var(--default-font-family);
+}
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
     color: black;
-    font-family: 'Rubik', sans-serif; 
+    font-family: var(--heading-font-family); 
     font-weight: bold;
 }
-p{
-    font-family: 'Poppins', sans-serif;
+h1 {
+    font-size: 96px;
+}
+
+.hero{
+    background: var(--secondary-color);
+    text-align: center;
+    padding: 160px 20px;
+}
+.hero h3 {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
     font-weight: normal;
 }
-font-family: 'Poppins', sans-serif;
-font-family: 'Rubik', sans-serif; 
+.hero h2 {
+    font-family: var(--heading-font-family);
+    font-weight: normal;
+    font-size: 24px;
+    color: rgba(39, 33, 66, 1);
+    line-height: 2;
+}
+
+.btn-branding {
+    background: var(--branding-color); 
+    border-radius: 4px; 
+    color: white;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+}
