Added a container: row and columns.

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,14 @@ h6 {
 h1 {
     font-size: 96px;
 }
+h2 {
+    font-size: 64px;
+}
+
+p {
+   font-weight: normal;
+   font-size: 16px;
+}
 
 .hero{
     background: var(--secondary-color);
@@ -46,6 +54,14 @@ h1 {
     background: var(--branding-color); 
     border-radius: 4px; 
     color: white;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+}
+
+.btn-branding-outline {
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
     font-size: 18px;
     line-height: 27px;
     padding: 15px 30px;
