--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ h6 {
 }
 h1 {
     font-size: 96px;
+    line-height: 1.5;
 }
 h2 {
     font-size: 64px;
@@ -29,6 +30,7 @@ h2 {
 p {
    font-weight: normal;
    font-size: 16px;
+   line-height: 1.5;
 }
 
 .hero{
@@ -47,7 +49,7 @@ p {
     font-weight: normal;
     font-size: 24px;
     color: rgba(39, 33, 66, 1);
-    line-height: 2;
+    line-height: 1.5;
 }
 
 .btn-branding {
@@ -65,4 +67,25 @@ p {
     font-size: 18px;
     line-height: 27px;
     padding: 15px 30px;
+}
+
+.project-description {
+    padding: 120px 60px; 
+}
+
+@media (max-width: 900px) {
+    h1 {
+        font-size: 44px;
+        line-height: none;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .hero {
+        padding: 80px 
+    }
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
 }
