Added navigation bar in HTML and two logos

--- a/src/style.css
+++ b/src/style.css
@@ -107,8 +107,37 @@ p {
 }
 
 .image-rocio:hover {
-    border-color: #FAC832 ;
+    border: 5px solid #fac832;
+    border-radius: 50%;
+  }
+
+  .logo {
+    max-height: 40px;
+  }
+
+nav {
+    padding: 20px 0;
 }
+nav ul {
+    padding: 0;
+    margin: 0;
+}
+nav li {
+    display: inline;
+    list-style: none;
+    line-height: 42px;
+    margin-left: 15px;
+}
+nav a {
+    text-decoration: none;
+    color: #272142;
+    transition: all 100ms ease-in-out;
+}
+nav li.active a, 
+nav a:hover {
+    color: var(--branding-color);
+}
+
 
 @media (max-width: 900px) {
     h1 {
