--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,9 @@ h1 {
 h2 {
     font-size: 64px;
 }
+h4 {
+    font-size: 48px;
+}
 
 p {
    font-weight: normal;
@@ -138,6 +141,39 @@ nav a:hover {
     color: var(--branding-color);
 }
 
+footer {
+    margin: 60px 0;
+}
+footer .contact-box {
+    background: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+footer .contact-box p {
+    margin: 0;
+}
+footer .email-link {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+}
+footer .email-link:hover {
+    color: var(--branding-color);
+}
+footer .social-links a {
+    margin: 0 20px;
+    color: var(--branding-color);
+    background: var(--secondary-color);
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 18px;
+    transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+    color: white;
+    background: var(--branding-color);
+}
+
 
 @media (max-width: 900px) {
     h1 {
@@ -146,6 +182,9 @@ nav a:hover {
     }
     h2 {
         font-size: 44px;
+    }
+    h4 {
+        font-size: 26px;
     }
     .hero {
         padding: 80px 
